<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/toolbar_bottom_card"
        app:title="@string/wifi"
        app:titleTextColor="?attr/text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/ssid"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/slight_round_shap"
                    android:hint="@string/ssid"
                    android:paddingLeft="15dp"
                    android:textColor="?attr/text_color"
                    android:textColorHint="@color/gray_bg" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/slight_round_shap"
                    android:hint="@string/password"
                    android:paddingLeft="15dp"
                    android:textColor="?attr/text_color"
                    android:textColorHint="@color/gray_bg" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"

                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/slight_round_shap"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/wpa"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColorHint="@color/gray_bg"
                        android:textColor="?attr/text_color"
                         android:button="@android:color/transparent"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/wpa" />

                    <RadioButton
                        android:id="@+id/wep"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColorHint="@color/gray_bg"
                        android:textColor="?attr/text_color"
                         android:button="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/wep" />

                    <RadioButton
                        android:id="@+id/none"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@android:color/transparent"
                        android:gravity="center"
                        android:textColorHint="@color/gray_bg"
                        android:textColor="?attr/text_color"
                         android:text="@string/none" />
                </RadioGroup>

                <TextView
                    android:id="@+id/create_wifi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/bg_button"
                    android:padding="14dp"
                    android:text="@string/create"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:adSize="BANNER"
        app:adUnitId="@string/admob_banner_ad_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</LinearLayout>