<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/toolbar_bottom_card"
        app:titleTextColor="?attr/text_color"
        app:title="@string/location" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/latitude"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:textColorHint="@color/gray_bg"
                    android:textColor="?attr/text_color"
                    android:background="@drawable/slight_round_shap"
                    android:hint="@string/latitude"
                    android:paddingLeft="15dp" />

                <EditText
                    android:id="@+id/longitude"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:textColorHint="@color/gray_bg"
                    android:textColor="?attr/text_color"
                    android:background="@drawable/slight_round_shap"
                    android:hint="@string/longitude"
                    android:paddingLeft="15dp" />

                <EditText
                    android:id="@+id/query"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:textColorHint="@color/gray_bg"
                    android:textColor="?attr/text_color"
                    android:background="@drawable/slight_round_shap"
                    android:gravity="start"
                    android:hint="@string/query"
                    android:lines="50"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/create_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/bg_button"
                    android:padding="14dp"
                    android:text="@string/create"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:adSize="BANNER"
        app:adUnitId="@string/admob_banner_ad_id"
        android:layout_alignParentBottom="true"/>

</LinearLayout>